src/objects/Apttus_DealOpti__PriceWaterfallComponent__c.object
<CustomObject>
    <description>Holds the components of a price waterfall</description>
    <fields>
        <fullName>Apttus_DealOpti__DealId__c</fullName>
        <description>ID of the associated deal</description>
        <inlineHelpText>ID of the associated deal</inlineHelpText>
        <label>Deal</label>
        <referenceTo>Apttus_DealMgr__Deal__c</referenceTo>
        <relationshipLabel>Price Waterfall Components</relationshipLabel>
        <relationshipName>PriceWaterfallComponents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_DealOpti__HValue__c</fullName>
        <description>The horizontal value</description>
        <inlineHelpText>The horizontal value</inlineHelpText>
        <label>HValue</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_DealOpti__PercentValue__c</fullName>
        <description>The price component percent value</description>
        <inlineHelpText>The price component percent value</inlineHelpText>
        <label>Percent Value</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_DealOpti__Sequence__c</fullName>
        <description>The price waterfall sequence</description>
        <inlineHelpText>The price waterfall sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_DealOpti__Type__c</fullName>
        <description>The price component type</description>
        <inlineHelpText>The price component type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealOpti__Value__c</fullName>
        <description>The price component value</description>
        <inlineHelpText>The price component value</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_DealOpti__YValue__c</fullName>
        <description>The Y position of the value</description>
        <inlineHelpText>The Y position of the value</inlineHelpText>
        <label>YValue</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <label>Price Waterfall Component</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Waterfall Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>